--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,33 +1,36 @@
 name: CMake
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    push:
+        branches: [ "master" ]
+    pull_request:
+        branches: [ "master" ]
 
 env:
-  BUILD_TYPE: Release
+    BUILD_TYPE: Release
 
 jobs:
-  build:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    build:
+        # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
+        # You can convert this to a matrix build if you need cross-platform coverage.
+        # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+        runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v3
+        steps:
+            - uses: actions/checkout@v3
 
-    - name: Configure CMake
-#      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+            - name: Configure CMake
+                run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-    - name: Build
-      run: cmake --build .
+            - name: Build
+                run: cmake --build .
 
-#    - name: Test
-#      working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-#      run: ctest -C ${{env.BUILD_TYPE}}
+            - name: Create release
+                uses: actions/create-release@v1
+                if: ${{ steps.changelog.outputs.skipped == 'false' }}
+                env:
+                GITHUB_TOKEN: ${{ secrets.github_token }}
+                with:
+                tag_name: ${{ steps.changelog.outputs.tag }}
+                release_name: ${{ steps.changelog.outputs.tag }}
+                body: ${{ steps.changelog.outputs.clean_changelog }}
