--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,9 @@ jobs:
             - name: Configure CMake
               run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-#            - name: Build
-#                run: cmake --build .
-#
+           - name: Build
+              run: cmake --build .
+
 #            - name: Create release
 #                uses: actions/create-release@v1
 #                if: ${{ steps.changelog.outputs.skipped == 'false' }}
