--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
-name: 'C++ CI'
+name: Release
 
 on:
   push:
     branches:
       - master
-      - feature/github_actions
 
 jobs:
   build:
@@ -30,3 +29,13 @@ jobs:
         draft: false
         prerelease: false
 
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./hello-0.0.${{ github.run_number }}-Linux.deb
+        asset_name: hello-0.0.${{ github.run_number }}-Linux.deb
+        asset_content_type: application/vnd.debian.binary-package
