--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,1 @@
-/CMakeFiles
-/Debug
-/x64
-/helloworld.dir
-/helloworld_cli.dir
-
-*.vcxproj
-*.vcxproj.filters
-*.sln
-
-CMakeCache.txt
-cmake_install.cmake
-version.h
+/**/build
