--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,7 @@ jobs:
 #      run: cmake -DCMAKE_BUILD_TYPE=Release -DWITH_BOOST_TEST=ON
     
     - name: Compile
-      run: cd homework_1 && mkdir build && cd build && cmake ../CMakeLists.txt && cmake --build . --config Release
-
-#    - name: Build
-#      run: cmake --build .
+      run: cd homework_1 && mkdir build && cd build && cmake ../CMakeLists.txt -DPROJECT_VERSION=${{github.run_number}} && cmake --build . --config Release
 
     - name: Create Release
       id: create_release
