--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,11 +12,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-#    - name: Update packages
-#      run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
-    
-#    - name: Compile
-#      run: cmake -DCMAKE_BUILD_TYPE=Release -DWITH_BOOST_TEST=ON
+    - name: Update packages
+      run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
     
     - name: Compile
       run: cd homework_1 && mkdir build && cd build && cmake ../CMakeLists.txt -DPROJECT_VERSION=${{github.run_number}} && cmake --build . --config Release
