--- a/homework_1/CMakeLists.txt
+++ b/homework_1/CMakeLists.txt
@@ -1,16 +1,25 @@
 cmake_minimum_required(VERSION 3.12)
 
 # Переменные, которые можем переопределять при запуске cmake
-set(PROJECT_VERSION "1" CACHE INTERNAL "Patch version")
+set(VER_REVISION 1 CACHE INTERNAL "Patch version")
 
-project(homework1 VERSION ${PROJECT_VERSION})
+project(homework VERSION ${VER_REVISION})
 
 # Автогенерация файлов
 configure_file(version.h.in version.h)
 
 # Исходники, добавляемые в проект
-add_executable(homework1 main.cpp)
+add_executable(homework main.cpp)
 
-target_include_directories(homework1
+target_include_directories(homework
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
+
+install(TARGETS homework RUNTIME DESTINATION bin)
+
+set(CPACK_GENERATOR DEB)
+set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+set(CPACK_PACKAGE_CONTACT art.shestakov@icloud.com)
+include(CPack)
