--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,3 +28,14 @@ jobs:
         release_name: Release ${{ github.run_number }}
         draft: false
         prerelease: false
+    
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./helloworld-${{ github.run_number }}-Linux.deb
+        asset_name: helloworld-${{ github.run_number }}-Linux.deb
+        asset_content_type: application/vnd.debian.binary-package
