--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,14 +15,8 @@ jobs:
     - name: Update packages
       run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
 
-    - name: Make dir
-      run: mkdir homework_1\build
-
-    - name: Prepare to compile
-      run: cd homework_1\build && cmake ../CMakeLists.txt -DVER_REVISION=${{github.run_number}} && cmake --build . --config Release
-
-    - name: Build package
-      run: cmake --build . --target package
+    - name: Compile
+      run: mkdir homework_1\build && cd homework_1\build && cmake ../CMakeLists.txt -DVER_REVISION=${{github.run_number}} && cmake --build . --config Release && cmake --build . --target package
 
     - name: Create Release
       id: create_release
