Эксперимент над workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,14 +12,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Update packages
-      run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
+#    - name: Update packages
+#      run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
 
 #    - name: Compile
 #      run: mkdir homework_1\build && cd homework_1\build && cmake ../CMakeLists.txt -DVER_REVISION=${{github.run_number}} && cmake --build . --config Release && cmake --build . --target package --config Release
 
-    - name: Compile
+    - name: Prepare to compile
       run: cmake -S homework_1 -B build
+      
+    - name: Compile
+      run: cmake --build build --config Release
 
     - name: Create Release
       id: create_release
