--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: /home/runner/work/OTUS/OTUS/homework_1/build/homework-${{ github.run_number }}-Linux.deb
+        asset_path: /build/homework-${{ github.run_number }}-Linux.deb
         asset_name: homework-${{ github.run_number }}-Linux.deb
         asset_content_type: application/vnd.debian.binary-package
