--- a/homework_1/CMakeLists.txt
+++ b/homework_1/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.12)
 
 # Переменные, которые можем переопределять при запуске cmake
 set(VER_REVISION 1 CACHE INTERNAL "Patch version")
+string(TIMESTAMP TS_TIME "%H:%M:%S")
+string(TIMESTAMP TS_DATE "%d.%m.%Y")
 
-project(homework VERSION ${VER_REVISION})
+project(homework)
 
 # Автогенерация файлов
 configure_file(version.h.in version.h)
