--- a/homework_1/version.h.in
+++ b/homework_1/version.h.in
@@ -3,3 +3,9 @@
 #define VERSION_REVISION ${VER_REVISION}
 #define COMPILE_TS_TIME "${TS_TIME}"
 #define COMPILE_TS_DATE "${TS_DATE}"
+
+#ifdef IS_DEBUG
+#define CONFIGURATION "Debug"
+#else
+#define CONFIGURATION "Release"
+#endif
