--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Prepare to compile
-      run: cmake -S homework_1 -B build -DVER_REVISION=${{github.run_number}}
+      run: cmake -S homework_1 -B build -DVER_REVISION=${{github.run_number}} -DIS_UBUNTU=ON
 
     - name: Compile
       run: cmake --build build --config Release
