--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,3 +42,12 @@ jobs:
         asset_path: ./build/homework-${{github.run_number}}-Linux.deb
         asset_name: homework-${{github.run_number}}-Linux.deb
         asset_content_type: application/vnd.debian.binary-package
+
+  build:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Prepare to compile
+      run: cmake -S homework_1 -B build -DVER_REVISION=${{github.run_number}} -DIS_WINDOWS=ON
