--- a/.github/workflows/release_win.yml
+++ b/.github/workflows/release_win.yml
@@ -17,3 +17,14 @@ jobs:
 
     - name: Compile
       run: cmake --build build --config Release
+
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      with:
+        upload_url: ${{steps.create_release.outputs.upload_url}}
+        asset_path: .\build\homework.exe
+        asset_name: homework.exe
+        asset_content_type: application/vnd.debian.binary-package
