--- a/.github/workflows/release_win.yml
+++ b/.github/workflows/release_win.yml
@@ -25,6 +25,6 @@ jobs:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       with:
         upload_url: ${{steps.create_release.outputs.upload_url}}
-        asset_path: .\build\homework.exe
+        asset_path: .\build\Release\homework.exe
         asset_name: homework.exe
         asset_content_type: application/vnd.debian.binary-package
