--- a/.github/workflows/release_win.yml
+++ b/.github/workflows/release_win.yml
@@ -18,6 +18,17 @@ jobs:
     - name: Compile
       run: cmake --build build --config Release
 
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      with:
+        tag_name: ${{github.run_number}}
+        release_name: Release ${{github.run_number}} Windows
+        draft: false
+        prerelease: false
+
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
@@ -27,4 +38,3 @@ jobs:
         upload_url: ${{steps.create_release.outputs.upload_url}}
         asset_path: .\build\Release\homework.exe
         asset_name: homework.exe
-        asset_content_type: application/vnd.debian.binary-package
