--- a/homework_2/CMakeLists.txt
+++ b/homework_2/CMakeLists.txt
@@ -2,4 +2,12 @@
 
 project(homework_2)
 
-add_executable(homework_2 main.cpp)
+add_executable(homework_2
+	main.cpp
+)
+
+set_target_properties(
+    Example PROPERTIES
+    CXX_STANDARD 11
+    CXX_STANDARD_REQUIRED ON
+)
