Поправлен CMakeLists. Добавлен кросскомпиляторный вариант использования исключения.

--- a/homework_2/CMakeLists.txt
+++ b/homework_2/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(homework_2
 )
 
 set_target_properties(
-    Example PROPERTIES
+    homework_2 PROPERTIES
     CXX_STANDARD 11
     CXX_STANDARD_REQUIRED ON
 )
